<resources>
    <string name="app_name">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="fav">Fav</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="txt_weather">txt_weather</string>
    <string name="txt_time">txt_time</string>
    <string name="txt_day">txt_day</string>
    <string name="txt_degree">txt_degree</string>
    <string name="cloud">Cloud</string>
    <string name="txt_cloud">txt_cloud</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="gps">GPS</string>
    <string name="temperature">Temperature and Wind Speed</string>
    <string name="kelvin">temp(°k),windSpeed(meter/sec)</string>
    <string name="celsius">temp(°c),windSpeed(meter/sec)</string>
    <string name="fahrenheit">temp(°f),windSpeed(miles/hour)</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="wind_speed">wind speed</string>
    <string name="Saturday" />
    <string name="Sunday" />
    <string name="Monday" />
    <string name="Tuesday" />
    <string name="Wednesday" />
    <string name="Friday" />
    <string name="Thursday" />
    <string name="maxdegree">maxDegree</string>
    <string name="desc">desc</string>
</resources>