<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".ui.settings.view.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <TextView
                    android:id="@+id/txtlang"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <RadioButton
                    android:id="@+id/radio_button_gps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/gps"
                    app:layout_constraintEnd_toEndOf="@+id/radio_button_map"
                    app:layout_constraintStart_toStartOf="@+id/radio_button_map"
                    app:layout_constraintTop_toBottomOf="@+id/radio_button_map" />

                <RadioButton
                    android:id="@+id/radio_button_map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/map"
                    app:layout_constraintEnd_toEndOf="@+id/txtlang"
                    app:layout_constraintStart_toStartOf="@+id/txtlang"
                    app:layout_constraintTop_toBottomOf="@+id/txtlang" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <TextView
                    android:id="@+id/textlang"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/language"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/radio_button_ar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic"
                    app:layout_constraintEnd_toEndOf="@+id/radio_button_en"
                    app:layout_constraintStart_toStartOf="@+id/radio_button_en"
                    app:layout_constraintTop_toBottomOf="@+id/radio_button_en" />

                <RadioButton
                    android:id="@+id/radio_button_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/english"
                    app:layout_constraintEnd_toEndOf="@+id/textlang"
                    app:layout_constraintStart_toStartOf="@+id/textlang"
                    app:layout_constraintTop_toBottomOf="@+id/textlang" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temperature"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/radio_button_k"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin"
                    app:layout_constraintEnd_toEndOf="@+id/radio_button_c"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/radio_button_c"
                    app:layout_constraintTop_toBottomOf="@+id/radio_button_c" />

                <RadioButton
                    android:id="@+id/radio_button_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    app:layout_constraintEnd_toEndOf="@+id/radio_button_f"
                    app:layout_constraintStart_toStartOf="@+id/radio_button_f"
                    app:layout_constraintTop_toBottomOf="@+id/radio_button_f" />

                <RadioButton
                    android:id="@+id/radio_button_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit"
                    app:layout_constraintEnd_toEndOf="@+id/text"
                    app:layout_constraintStart_toStartOf="@+id/text"
                    app:layout_constraintTop_toBottomOf="@+id/text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <TextView
                    android:id="@+id/wind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/wind_speed"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/miles_hour"
                    app:layout_constraintEnd_toEndOf="@+id/radio0"
                    app:layout_constraintStart_toStartOf="@+id/radio0"
                    app:layout_constraintTop_toBottomOf="@+id/radio0" />

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/meter_sec"
                    app:layout_constraintEnd_toEndOf="@+id/wind"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/wind"
                    app:layout_constraintTop_toBottomOf="@+id/wind" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>